Fixed an issue causing the window to overscroll on iOS devices, set drawing canvas to display none.

--- a/app/sass/comp/_section.scss
+++ b/app/sass/comp/_section.scss
@@ -1,3 +1,11 @@
+body{
+  display:block;
+  width:100%;
+  height:100%;
+  max-height:100%;
+  max-width:100%;
+  background-color:#000000;
+}
 .depth{
   -webkit-perspective: 1000px;
   perspective:1000px;
